# contemporary-physics-page

./: .gitmodules  404.html  README.md  cmds.txt  hooks.py  index.html  mkdocs.yml  pyproject.toml
1. Física Molecular/1.1 La molécula de hidrogeno/: index.html
1. Física Molecular/1.2 Orbitales moleculares/: index.html
1. Física Molecular/1.3 El enlace iónico/: index.html
1. Física Molecular/1.4 Interacción de Van Der Wals/: index.html
1. Física Molecular/1.5 Espectros rotacionales y vibracionales/: index.html
2. Física Núclear/2.1 Estructura nuclear/: index.html
2. Física Núclear/2.2 Procesos nucleares/: index.html
2. Física Núclear/2.3 Desintegración alfa/: index.html
2. Física Núclear/2.4 Desintegración beta/: index.html
3. Física de Partículas/3.1 Simetrías/: index.html
3. Física de Partículas/3.2 Fermiones/: index.html
3. Física de Partículas/3.3 Fotones/: index.html
3. Física de Partículas/3.4.1 Dispersión Electrón-Muón/: index.html
3. Física de Partículas/3.4.2 Aniquilación Electrón-Positrón/: index.html
3. Física de Partículas/3.4.2 Dispersión de Compton/: index.html
3. Física de Partículas/3.4.3 Aniquilación Electrón-Positrón/: index.html
3. Física de Partículas/3.4.3 Dispersión de Compton/: index.html
Física Molecular/El enlace iónico/: index.html
Física Molecular/Espectros rotacionales y vibracionales/: index.html
Física Molecular/Interacción de Van Der Wals/: index.html
Física de Partículas/Fotones/: index.html
Sin título/: index.html
notebooks/: lenard-jones.ipynb
obsidian/: index.html
search/: search_index.json
(+12 files in other folders)
